# agentic_ai

07_streaming/: main.py  pyproject.toml
OpenAI_Agents_SDK _Simple_Overview/: Readme.md
OpenRouter_AI_Agents_SDK/: .env  app.py  main.py  pyproject.toml
browse_use/: main.py  pyproject.toml
chatbot/: .env  main.py  pyproject.toml
context/: main.py  pyproject.toml
guardrail/: README.md  input_guardrail.py  main.py  output_guardrail.py  pyproject.toml
handoffs/: README.md  all_feature_of_handoff.py  app.py  main.py  pyproject.toml
hello-world/: async.py  main.py  pyproject.toml
open-ai-sdk-with-chainlit/: main.py  pyproject.toml
openai_agents_RAG/: README.md  app.py  main.py  pdf.py  pdf_backend.py  practice.py  pyproject.toml  streamlit_ui.py
structured_output/: README.md  main.py  pyproject.toml
swarm/: readme.md
tracing/: README.md  agentops.py  main.py  pyproject.toml
